# arkadia

./: .prettierignore  Cargo.toml  eslint.config.js  package.json  pnpm-lock.yaml
crates/terminal-renderer/: Cargo.toml
src/: App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_registry.rs  lib.rs  session.rs  terminal.rs  terminal_state.rs
src-tauri/src/claude_watcher/: mod.rs  parse.rs  state.rs  watcher.rs
src/components/: AgentBadge.tsx  PaneTreeView.tsx  ProjectContextMenu.tsx  SettingsDialog.tsx  Sidepanel.tsx  TabBar.tsx  TerminalWebGPU.tsx  WorkspaceContextMenu.tsx  WorkspaceDialog.tsx
src/lib/: agentState.ts  sessionTypes.ts
src/styles/: app.css
