[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/terminal-renderer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TRINITX"]
license = "MIT"
repository = "https://github.com/TRINITXX/arkadia"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
