[package]
name = "arkadia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "arkadia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
termwiz = "0.23"
tauri-plugin-window-state = "2.4.1"
unicode-width = "0.2"
font-kit = "0.14"
notify = "6"
tokio = { version = "1", features = ["fs", "sync", "rt", "rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tauri-plugin-notification = "2"

[dev-dependencies]
tempfile = "3"
